--- a/trello/public/stylesheets/board_menu.styl
+++ b/trello/public/stylesheets/board_menu.styl
@@ -8,9 +8,11 @@ div#board_menu_wrapper
   width: 340px
   position: absolute
   top: 0
+  left: auto
   right: 0
   bottom: 0
   border-radius: 0px
+  transition-duration: .1s
   .activity
     border-bottom: 1px solid #E2E4E6
     padding: 10px 0
@@ -24,4 +26,27 @@ div#board_menu_wrapper
   transform: translateX(0)
 
 #open_board_menu.invisible
-  display: none  
+  display: none 
+
+#board_menu
+  display: flex
+  flex-direction: column
+  align-items: flex-start
+  flex-wrap: nowrap
+  -webkit-box-pack: start
+  justify-content: flex-start
+  overflow: hidden
+  position: absolute
+  top: 0
+  right: 0
+  bottom: 0
+  width: 340px
+
+.side_menu_activity
+  box-sizing: border-box
+  flex: 1 1 auto
+  -webkit-box-flex: 1
+  overflow-x: hidden
+  overflow-y: auto
+  padding: 12px 6px 12px 12px
+  width: 100%  
